--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 				<a class="menu__item" href="#0">Главная</a>
 				<a class="menu__item" href="#0">Посты</a>
 				<a class="menu__item" href="#0">Статьи</a>
+				<a class="menu__item" href="#0">Теги</a>
 				<a class="menu__item" href="#0">Темы</a>
 				<a class="menu__item" href="#0">Контакты</a>
 			</nav>
@@ -23,29 +24,40 @@
 		</div>	
 	</header>
 	<section>
-			<p class="title_trend">Сейчас в тренде</p>
+			<p class="title_trend">СЕЙЧАС В ТРЕНДЕ</p>
 			<div class="trend_category">
 				<div class="card picture1">
 					<div class="border">
-						<div class="category">Lifystyle Interior</div>
-						<div class="title ">Сейчас в тренде: сад на подконнике </div>	
+						<div class="category">
+							<a class="category_item" href="#">Lifystyle</a>
+							<a  class="category_item" href="#">Interior</a>							
+						</div>
+						<div>Сейчас в тренде: сад на подконнике </div>	
 					</div>	
 				</div>
 				<div class="card picture2">
 					<div class="border">
-						<div class="category">Food</div>
+						<div class="category">
+							<a class="category_item" href="#">Food</a>							
+						</div>
 						<div class="title ">Сыры на красивых картинках из интернета: какие они на вкус?</div>				
 					</div>
 				</div>	
 				<div class="card  picture3">
 					<div class="border">
-						<div class="category">Lifystyle travel</div>
+						<div class="category">
+							<a class="category_item" href="#">Lifystyle</a>
+							<a  class="category_item" href="#">Travel</a>							
+						</div>
 						<div class="title">Собираемся в первый поход в горы	</div>				
 					</div>
 				</div>	
 				<div class="card picture4">
 					<div class="border">
-						<div class="category">Food health</div>
+						<div class="category">
+							<a class="category_item" href="#">Food</a>
+							<a  class="category_item" href="#">Health</a>							
+						</div>						
 						<div class="title ">Сейчас в тренде: сколько витамина C в лимонах?</div>				
 					</div>
 				</div>	
@@ -56,7 +68,10 @@
 			<div class="frame">
 				<img class="frame_img" src="images/last-post1.jpg">
 				<div class="description">
-					<div class="category">travel  health</div>				
+						<div class="category">
+							<a class="category_item" href="#">Travel</a>
+							<a  class="category_item" href="#">Health</a>							
+						</div>											
 					<h2 class="frame_title">10 мест, ради которых стоит проснуться на рассвете</h2>
 					<div class="date_author">
 							<div class="date"> 10 июня 2019 </div>
@@ -68,7 +83,10 @@
 			<div class="frame">
 				<img class="frame_img" src="images/last-post2.jpg">
 				<div class="description">
-					<div class="category">health lifestyle</div>				
+						<div class="category">							
+							<a  class="category_item" href="#">Health</a>							
+							<a class="category_item" href="#">lifestyle</a>
+						</div>													
 					<h2 class="frame_title">йога для начинающих в домашних условиях</h2>
 					<div class="date_author">
 							<div class="date"> 10 июня 2019 </div>
@@ -80,7 +98,9 @@
 			<div class="frame">
 				<img class="frame_img" src="images/last-post3.jpg">
 				<div class="description">
-					<div class="category">music</div>				
+					<div class="category">							
+							<a  class="category_item" href="#">Music</a>							
+					</div>																		
 					<h2 class="frame_title">лучшие музыкальные фестивали этого лета</h2>
 					<div class="date_author">
 							<div class="date"> 10 июня 2019 </div>
@@ -93,7 +113,10 @@
 			<div class="frame">
 				<img class="frame_img" src="images/last-post4.jpg">
 				<div class="description">
-					<div class="category">lifestyle food</div>				
+						<div class="category">														
+							<a class="category_item" href="#">lifestyle</a>
+							<a  class="category_item" href="#">Food</a>							
+						</div>													
 					<h2 class="frame_title">наукоемкий подход к кулинарии</h2>
 					<div class="date_author">
 						<div class="date"> 10 июня 2019 </div>
@@ -105,7 +128,11 @@
 			<div class="frame">
 				<img class="frame_img" src="images/last-post5.jpg">
 				<div class="description">
-					<div class="category">lifestyle interior art</div>				
+					<div class="category">														
+							<a class="category_item" href="#">lifestyle</a>
+							<a  class="category_item" href="#">Interiior</a>	
+							<a  class="category_item" href="#">Art</a>													
+						</div>													
 					<h2 class="frame_title">делаем модные принты на подушках для интерьера</h2>
 					<div class="date_author">
 						<div class="date"> 10 июня 2019 </div>
@@ -122,35 +149,35 @@
 		<div class="latest_post_item">
 			<img class="latest_post_img" src="images/last-post1.jpg">
 			<div class="description_latest_post_item">
-			<div class="date"> 10 июня 2019 </div>
+			<div class="date_post"> 10 июня 2019 </div>
 			<h2 class="latest_post_font">10 мест, ради которых стоит проснуться</h2>				
 			</div>						
 		</div>				 	
 		<div class="latest_post_item">
 			<img class="latest_post_img" src="images/last-post2.jpg">
 			<div class="description_latest_post_item">
-			<div class="date"> 14 июня 2019 </div>
+			<div class="date_post"> 14 июня 2019 </div>
 			<h2 class="latest_post_font">йога для домашних</h2>				
 			</div>						
 		</div>				 		
 		<div class="latest_post_item">
 			<img class="latest_post_img" src="images/last-post3.jpg">
 			<div class="description_latest_post_item">
-			<div class="date"> 14 июня 2019 </div>
+			<div class="date_post"> 14 июня 2019 </div>
 			<h2 class="latest_post_font">как мы превратили класное место в балкон</h2>				
 			</div>						
 		</div>				 		
 		<div class="latest_post_item">
 			<img class="latest_post_img" src="images/last-post4.jpg">
 			<div class="description_latest_post_item">
-			<div class="date"> 14 июня 2019 </div>
+			<div class="date_post"> 14 июня 2019 </div>
 			<h2 class="latest_post_font">кулинарный подход к науке</h2>				
 			</div>						
 		</div>				 		
 		<div class="latest_post_item">
 			<img class="latest_post_img" src="images/7.jpg">
 			<div class="description_latest_post_item">
-			<div class="date"> 14 июня 2019 </div>
+			<div class="date_post"> 14 июня 2019 </div>
 			<h2 class="latest_post_font">лучшие прически для распущенных волос</h2>				
 			</div>						
 		</div>		
@@ -195,25 +222,25 @@
 	</div>
 	<p class="title_trend">Наши изделия</p>
 	<section class="shop">					
-			<div class="shop__item">			 	
-				<img  class="shop_img" src="images/shop-item-tablet1.jpg">
-				<div class="border_shop">
-				<h2 >подушки на диван</h2>
-				<p>Набор из двух подушек с модными принтами. Видео о создании здесь.</p>
+			<div class="shop__item">			
+				<img src="images/shop-item-tablet1.jpg">				
+				<div class="shop_content">	
+				<h2 class="frame_title">Подушки на диван</h2>
+				<p>Набор из двух подушек с модными принтами. Видео о создании <a class="link" href="#">здесь.</a></p>
 						<div class="to_buy">
 							<div class="class">
-								<div class="price_old">1000 р</div>
+								<div class="price_old">1000 р </div>
 								<div class="price">800 р</div>
 							</div>				
 							<a class="to_shop" href="#">в магазин</a>			
-						</div>
-				</div>																
+						</div>				
+				</div>				
 			</div>
 			<div class="shop__item">			
-				<img class="shop_img" src="images/shop-item-tablet2.jpg">
-				<div class="border_shop">			
-				<h2>кукла "зайчик"</h2>
-				<p>Интерьерная рукодельная кукла "Зайчик", созданию которой поясвящена весенняя серия постов в блоге и несколько подкастов</p>
+				<img src="images/shop-item-tablet2.jpg">				
+				<div class="shop_content">	
+				<h2 class="frame_title">Кукла "зайчик"</h2>
+				<p>Интерьерная рукодельная кукла "Зайчик", созданию которой поясвящена <a class="link" href="#">весенняя серия постов</a> в блоге и несколько подкастов</p>
 						<div class="to_buy">
 							<div class="class">
 								<div class="price_old"> </div>
@@ -221,25 +248,23 @@
 							</div>				
 							<a class="to_shop" href="#">в магазин</a>			
 						</div>				
-			</div>				
-			</div>	
-			<div class="shop__item">
-				<img class="shop_img" src="images/shop-item-tablet3.jpg">
-				<div class="border_shop">
-				<h2>шестиугольная рамка</h2>
-				<p>Необычная рамка для украшения дома из видео "Как сделать рамку из подручных средств за 30 минут.</p>
+				</div>				
+			</div>
+			<div class="shop__item">			
+				<img  src="images/shop-item-tablet3.jpg">				
+				<div class="shop_content">	
+				<h2 class="frame_title">ШЕСТИУГОЛЬНАЯ РАМКА</h2>
+				<p>Необычная рамка для украшения дома из видео <a class="link" href="#">"Как сделать рамку из подручных средств за 30 минут".</a></p>
 						<div class="to_buy">
 							<div class="class">
-								<div class="price_old">500 р</div>
+								<div class="price_old">500 р </div>
 								<div class="price">400 р</div>
 							</div>				
 							<a class="to_shop" href="#">в магазин</a>			
-						</div>			
-				</div>								
-			</div>			
+						</div>				
+				</div>				
+			</div>	
 	</section>				
-
-
 <footer>	
 	<div class="socials">
 	<img class='socials_item' src="svg/001-dribbble.svg" alt="">
